# norevia

./: .env.example  .gitignore  README.md  codex_prompt.md  norevia.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260722_0001_initial.py
apps/api/app/: __init__.py  cache.py  config.py  database.py  main.py  security.py
apps/api/app/models/: entities.py
apps/api/app/routes/: __init__.py  catalog.py  health.py  locations.py  profiles.py  rankings.py
apps/api/app/schemas/: __init__.py  api.py
apps/api/app/scoring/: __init__.py  engine.py
apps/api/app/services/: ranking.py  seed_catalog.py
apps/api/tests/: test_api.py  test_catalog.py  test_scoring.py
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  (+1 more)
deploy/: ionos-bootstrap.sh  logrotate-norevia
deploy/nginx/: norevia.conf
deploy/scripts/: backup.sh  restore.sh  update-data.sh
deploy/systemd/: norevia-api.service  norevia-backup.service  norevia-backup.timer  norevia-pipeline.service  norevia-pipeline.timer
docs/: architecture.md  data-governance.md  deployment-ionos.md
pipelines/: pyproject.toml
pipelines/norevia_pipeline/: __init__.py  cli.py  contracts.py
pipelines/norevia_pipeline/normalization/: units.py
pipelines/norevia_pipeline/sources/: base.py  destatis.py  eurostat.py
pipelines/norevia_pipeline/validation/: rules.py
pipelines/tests/: test_source_safety.py  test_validation.py
(+24 files in other folders)
