[project]
name="norevia-pipeline"
version="0.1.0"
requires-python=">=3.12"
dependencies=["httpx>=0.28,<1","polars>=1.31,<2","pydantic>=2.11,<3","pydantic-settings>=2.10,<3","sqlalchemy[asyncio]>=2.0.41,<3","asyncpg>=0.30,<1"]
[project.optional-dependencies]
dev=["pytest>=8.4,<9","ruff>=0.12,<1"]
[project.scripts]
norevia-pipeline="norevia_pipeline.cli:main"
[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
