[project]
name = "norevia-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  "geoalchemy2>=0.18,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "redis>=6,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1"
]

[project.optional-dependencies]
dev = ["aiosqlite>=0.21,<1", "mypy>=1.16,<2", "pytest>=8.4,<9", "pytest-asyncio>=1,<2", "ruff>=0.12,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
